# SmallRenderer

./: CMakeLists.txt  README.md
SmallRenderer/: main.cpp
SmallRenderer/core/: buffer.cpp  buffer.h  camera.cpp  camera.h  draw2d.cpp  draw2d.h  file.cpp  file.h  image.cpp  image.h  light.cpp  light.h  math.cpp  math.h  matrix.h  model.cpp  model.h  transform.cpp  transform.h  util.cpp  util.h  vector.cpp  vector.h
SmallRenderer/shader/: blinnphongshader.cpp  blinnphongshader.h  shader.cpp  shader.h
